reset unused resource library

--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,109 +1,109 @@
-add_subdirectory(accounting)
-add_subdirectory(admin)
-add_subdirectory(agriculture)
-add_subdirectory(analytics)
-add_subdirectory(ancestry)
-add_subdirectory(artificialIntelligence)
-add_subdirectory(audio_set)
-add_subdirectory(autumn)
-add_subdirectory(awards)
-add_subdirectory(banking)
-add_subdirectory(basic)
-add_subdirectory(biology)
-add_subdirectory(biometrics)
-add_subdirectory(bloodDonation)
-add_subdirectory(business)
-add_subdirectory(business_1)
-add_subdirectory(business_and_finance)
-add_subdirectory(character)
-add_subdirectory(city_park)
-add_subdirectory(cityscape)
-add_subdirectory(cleaning)
-add_subdirectory(communication)
-add_subdirectory(communication_1)
-add_subdirectory(construction)
-add_subdirectory(countrysFlags)
-add_subdirectory(cryptoCurrency)
-add_subdirectory(cyber_bullying)
-add_subdirectory(dataAndGraphs)
-add_subdirectory(dataProtection)
-add_subdirectory(dataScience)
-add_subdirectory(delivery)
-add_subdirectory(designTools)
-add_subdirectory(development)
-add_subdirectory(dialogue)
-add_subdirectory(digitalMarketing)
-add_subdirectory(domotic)
-add_subdirectory(ecology)
-add_subdirectory(economicalGrowth)
-add_subdirectory(education)
-add_subdirectory(educationElements)
-add_subdirectory(essential)
-add_subdirectory(fair)
-add_subdirectory(familyLife)
-add_subdirectory(fantasy)
-add_subdirectory(file)
-add_subdirectory(finance)
-add_subdirectory(financeAndAccounting)
-add_subdirectory(flags)
-add_subdirectory(font_awesome)
-add_subdirectory(gaming)
-add_subdirectory(gardening)
-add_subdirectory(gastronomy)
-add_subdirectory(geneticsAndBioengineering)
-add_subdirectory(geography)
-add_subdirectory(germany)
-add_subdirectory(google)
-add_subdirectory(gym)
-add_subdirectory(hairstyles)
-add_subdirectory(healthyFood)
-add_subdirectory(home)
-add_subdirectory(hotelServices)
-add_subdirectory(household)
-add_subdirectory(humanMind)
-add_subdirectory(influencer_marketing)
-add_subdirectory(interaction)
-add_subdirectory(investing)
-add_subdirectory(literature)
-add_subdirectory(marketing)
-add_subdirectory(material_design)
-add_subdirectory(medical)
-add_subdirectory(medical_1)
-add_subdirectory(medical_2)
-add_subdirectory(medieval)
-add_subdirectory(money)
-add_subdirectory(money_service)
-add_subdirectory(newsMedia)
-add_subdirectory(office)
-add_subdirectory(oil_gas)
-add_subdirectory(origami)
-add_subdirectory(pins)
-add_subdirectory(pirate)
-add_subdirectory(pokemonGo)
-add_subdirectory(professionAvatars)
-add_subdirectory(projectManagement)
-add_subdirectory(realEstate)
-add_subdirectory(removals)
-add_subdirectory(report)
-add_subdirectory(sales)
-add_subdirectory(science)
-add_subdirectory(science_1)
-add_subdirectory(seo)
-add_subdirectory(socialMedia)
-add_subdirectory(sport)
-add_subdirectory(squaricons)
-add_subdirectory(startups)
-add_subdirectory(stationery)
-add_subdirectory(teamwork)
-add_subdirectory(technology)
-add_subdirectory(techSupport)
-add_subdirectory(transport)
-add_subdirectory(travel)
-add_subdirectory(travel_1)
-add_subdirectory(universal)
-add_subdirectory(userInterface)
-add_subdirectory(users)
-add_subdirectory(warningSigns)
-add_subdirectory(weather)
-add_subdirectory(wildWest)
-add_subdirectory(worldLandmark)
+#add_subdirectory(accounting)
+#add_subdirectory(admin)
+#add_subdirectory(agriculture)
+#add_subdirectory(analytics)
+#add_subdirectory(ancestry)
+#add_subdirectory(artificialIntelligence)
+#add_subdirectory(audio_set)
+#add_subdirectory(autumn)
+#add_subdirectory(awards)
+#add_subdirectory(banking)
+#add_subdirectory(basic)
+#add_subdirectory(biology)
+#add_subdirectory(biometrics)
+#add_subdirectory(bloodDonation)
+#add_subdirectory(business)
+#add_subdirectory(business_1)
+#add_subdirectory(business_and_finance)
+#add_subdirectory(character)
+#add_subdirectory(city_park)
+#add_subdirectory(cityscape)
+#add_subdirectory(cleaning)
+#add_subdirectory(communication)
+#add_subdirectory(communication_1)
+#add_subdirectory(construction)
+#add_subdirectory(countrysFlags)
+#add_subdirectory(cryptoCurrency)
+#add_subdirectory(cyber_bullying)
+#add_subdirectory(dataAndGraphs)
+#add_subdirectory(dataProtection)
+#add_subdirectory(dataScience)
+#add_subdirectory(delivery)
+#add_subdirectory(designTools)
+#add_subdirectory(development)
+#add_subdirectory(dialogue)
+#add_subdirectory(digitalMarketing)
+#add_subdirectory(domotic)
+#add_subdirectory(ecology)
+#add_subdirectory(economicalGrowth)
+#add_subdirectory(education)
+#add_subdirectory(educationElements)
+#add_subdirectory(essential)
+#add_subdirectory(fair)
+#add_subdirectory(familyLife)
+#add_subdirectory(fantasy)
+#add_subdirectory(file)
+#add_subdirectory(finance)
+#add_subdirectory(financeAndAccounting)
+#add_subdirectory(flags)
+#add_subdirectory(font_awesome)
+#add_subdirectory(gaming)
+#add_subdirectory(gardening)
+#add_subdirectory(gastronomy)
+#add_subdirectory(geneticsAndBioengineering)
+#add_subdirectory(geography)
+#add_subdirectory(germany)
+#add_subdirectory(google)
+#add_subdirectory(gym)
+#add_subdirectory(hairstyles)
+#add_subdirectory(healthyFood)
+#add_subdirectory(home)
+#add_subdirectory(hotelServices)
+#add_subdirectory(household)
+#add_subdirectory(humanMind)
+#add_subdirectory(influencer_marketing)
+#add_subdirectory(interaction)
+#add_subdirectory(investing)
+#add_subdirectory(literature)
+#add_subdirectory(marketing)
+#add_subdirectory(material_design)
+#add_subdirectory(medical)
+#add_subdirectory(medical_1)
+#add_subdirectory(medical_2)
+#add_subdirectory(medieval)
+#add_subdirectory(money)
+#add_subdirectory(money_service)
+#add_subdirectory(newsMedia)
+#add_subdirectory(office)
+#add_subdirectory(oil_gas)
+#add_subdirectory(origami)
+#add_subdirectory(pins)
+#add_subdirectory(pirate)
+#add_subdirectory(pokemonGo)
+#add_subdirectory(professionAvatars)
+#add_subdirectory(projectManagement)
+#add_subdirectory(realEstate)
+#add_subdirectory(removals)
+#add_subdirectory(report)
+#add_subdirectory(sales)
+#add_subdirectory(science)
+#add_subdirectory(science_1)
+#add_subdirectory(seo)
+#add_subdirectory(socialMedia)
+#add_subdirectory(sport)
+#add_subdirectory(squaricons)
+#add_subdirectory(startups)
+#add_subdirectory(stationery)
+#add_subdirectory(teamwork)
+#add_subdirectory(technology)
+#add_subdirectory(techSupport)
+#add_subdirectory(transport)
+#add_subdirectory(travel)
+#add_subdirectory(travel_1)
+#add_subdirectory(universal)
+#add_subdirectory(userInterface)
+#add_subdirectory(users)
+#add_subdirectory(warningSigns)
+#add_subdirectory(weather)
+#add_subdirectory(wildWest)
+#add_subdirectory(worldLandmark)
