--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(currency)
 add_subdirectory(eshi)
+add_subdirectory(latinka_translitterator)
 #add_subdirectory(pocket_munnin)
 add_subdirectory(tsmok)
 #add_subdirectory(warehouse_tsd)
