--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -3,5 +3,5 @@ add_subdirectory(eshi)
 add_subdirectory(latinka_translitterator)
 add_subdirectory(pocket_munnin)
 add_subdirectory(tsmok)
-#add_subdirectory(warehouse_tsd)
+add_subdirectory(warehouse_tsd)
 add_subdirectory(swan_test)
