--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -14,7 +14,7 @@ add_subdirectory(af_base)
 #add_subdirectory(biology)
 #add_subdirectory(biometrics)
 #add_subdirectory(bloodDonation)
-#add_subdirectory(business)
+add_subdirectory(business)
 #add_subdirectory(business_1)
 #add_subdirectory(business_and_finance)
 #add_subdirectory(character)
@@ -71,7 +71,7 @@ add_subdirectory(af_base)
 #add_subdirectory(investing)
 #add_subdirectory(literature)
 #add_subdirectory(marketing)
-#add_subdirectory(material_design)
+add_subdirectory(material_design)
 #add_subdirectory(medical)
 #add_subdirectory(medical_1)
 #add_subdirectory(medical_2)
