--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "projects/latinka_translitterator"]
 	path = source/projects/latinka_translitterator
 	url = https://github.com/andrij-felenko/Latinka-transliterator.git
+[submodule "source/related/qthttpserver"]
+	path = source/related/qthttpserver
+	url = https://github.com/andrij-felenko/qthttpserver.git
